# copforge

./: .gitignore  .pre-commit-config.yaml  README.md  env.example  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  main.py  mcp_client.py
src/core/: README.md  __init__.py  config.py  constants.py  telemetry.py
src/mcp_servers/cop_fusion/: README.md  __init__.py  cop_sync.py  mapa_client.py  server.py  state.py  tools.py
src/mcp_servers/multimodal/: README.md  __init__.py  audio_tools.py  document_tools.py  image_tools.py  server.py
src/models/: README.md  __init__.py  cop.py  sensor.py
src/parsers/: __init__.py  asterix_parser.py  base_parser.py  drone_parser.py  manual_parser.py  parser_factory.py  radio_parser.py
src/security/: __init__.py  firewall.py
tests/mcp_servers/: test_cop_fusion.py  test_multimodal.py
tests/parsers/: test_parser.py
tests/security/: test_firewall.py
