[project]
name = "copforge"
version = "0.1.0"
description = "Modular information fusion system with A2A protocol for building Common Operational Pictures"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Pablo Martínez-Agulló", email = "pablo.martinez.agullo@gmail.com" }
]
keywords = [
    "a2a",
    "agent-to-agent",
    "mcp",
    "information-fusion",
    "cop",
    "langgraph",
    "multi-agent",
]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # === A2A Protocol ===
    "a2a-sdk[http-server,telemetry]>=0.3.0",
    
    # === MCP Protocol ===
    "mcp>=1.0.0",
    
    # === LangGraph & LangChain ===
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    
    # === Telemetry ===
    "langsmith>=0.1.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-httpx>=0.44b0",
    
    # === Data Models & Validation ===
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # === Async & HTTP ===
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
    
    # === Utilities ===
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
# Database support (for future COP persistence)
db = [
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "geoalchemy2>=0.14.0",
]

# Development tools
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "commitizen>=4.0.0",
    "bandit>=1.8.0",
]

# All optional dependencies
all = [
    "copforge[db,dev]",
]

[project.scripts]
# CLI entry points (future)
copforge = "copforge.cli:main"

[project.urls]
Homepage = "https://github.com/MartinezAgullo/copforge"
Documentation = "https://github.com/MartinezAgullo/copforge#readme"
Repository = "https://github.com/MartinezAgullo/copforge"
# Issues = "https://github.com/MartinezAgullo/copforge/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src/"]

# === Ruff Configuration ===
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B009",   # do not call getattr with a constant attribute value
]

[tool.ruff.lint.isort]
known-first-party = ["agents", "mcp_servers", "models", "core", "utils"]

# === Pytest Configuration ===
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests",
]

# === MyPy Configuration ===
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain.*",
    "langsmith.*",
    "mcp.*",
    "a2a.*",
]
ignore_missing_imports = true

# === Coverage Configuration ===
[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]